crates/ebpf-verifier/tests/snapshots/trace_snapshot__trace_schema_diamond.snap
---
source: crates/ebpf-verifier/tests/trace_snapshot.rs
assertion_line: 28
expression: "trace_json(\"diamond.bin\")"
---
[
  {
    "pc": 0,
    "insns": "0   mov r1, 5",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          5,
          5
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r1 mov= 5"
  },
  {
    "pc": 1,
    "insns": "1   jeq r1, 10, +2",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          5,
          5
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "jeq r1, 10, +2"
  },
  {
    "pc": 4,
    "insns": "4   mov r0, 2",
    "regs": [
      {
        "r": 0,
        "type": "scalar",
        "range": [
          2,
          2
        ],
        "offset": null
      },
      {
        "r": 1,
        "type": "bottom",
        "range": null,
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r0 mov= 2"
  },
  {
    "pc": 5,
    "insns": "5   exit",
    "regs": [
      {
        "r": 0,
        "type": "scalar",
        "range": [
          2,
          2
        ],
        "offset": null
      },
      {
        "r": 1,
        "type": "bottom",
        "range": null,
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "exit"
  },
  {
    "pc": 2,
    "insns": "2   mov r0, 1",
    "regs": [
      {
        "r": 0,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          5,
          5
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r0 mov= 1"
  },
  {
    "pc": 3,
    "insns": "3   ja +1",
    "regs": [
      {
        "r": 0,
        "type": "scalar",
        "range": [
          1,
          1
        ],
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          5,
          5
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "ja r0, 0, +1"
  },
  {
    "pc": 5,
    "insns": "5   exit",
    "regs": [
      {
        "r": 0,
        "type": "scalar",
        "range": [
          1,
          2
        ],
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          5,
          5
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "exit"
  }
]
