crates/ebpf-verifier/tests/snapshots/trace_snapshot__trace_schema_endian.snap
---
source: crates/ebpf-verifier/tests/trace_snapshot.rs
expression: "trace_json(\"endian.bin\")"
---
[
  {
    "pc": 0,
    "insns": "0   mov r1, 305419896",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "scalar",
        "range": [
          305419896,
          305419896
        ],
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r1 mov= 305419896"
  },
  {
    "pc": 1,
    "insns": "1   end r1, 32",
    "regs": [
      {
        "r": 0,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r1 end= 32"
  },
  {
    "pc": 2,
    "insns": "2   mov r0, r1",
    "regs": [
      {
        "r": 0,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "r0 mov= r1"
  },
  {
    "pc": 3,
    "insns": "3   exit",
    "regs": [
      {
        "r": 0,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "exit"
  }
]
