crates/ebpf-verifier/tests/snapshots/trace_snapshot__trace_schema_helper.snap
---
source: crates/ebpf-verifier/tests/trace_snapshot.rs
expression: "trace_json(\"helper_prandom.bin\")"
---
[
  {
    "pc": 0,
    "insns": "0   call 43",
    "regs": [
      {
        "r": 0,
        "type": "scalar",
        "range": [
          0,
          2147483647
        ],
        "offset": null
      },
      {
        "r": 1,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [],
    "action": "call 43"
  },
  {
    "pc": 1,
    "insns": "1   *(dw *)(r10 + -8) = r0",
    "regs": [
      {
        "r": 0,
        "type": "scalar",
        "range": [
          0,
          2147483647
        ],
        "offset": null
      },
      {
        "r": 1,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [
      {
        "offset": -8,
        "value": "unknown"
      },
      {
        "offset": -7,
        "value": "unknown"
      },
      {
        "offset": -6,
        "value": "unknown"
      },
      {
        "offset": -5,
        "value": "unknown"
      },
      {
        "offset": -4,
        "value": "unknown"
      },
      {
        "offset": -3,
        "value": "unknown"
      },
      {
        "offset": -2,
        "value": "unknown"
      },
      {
        "offset": -1,
        "value": "unknown"
      }
    ],
    "action": "*(dw *)(r10 + -8) = r0"
  },
  {
    "pc": 2,
    "insns": "2   r0 = *(dw *)(r10 + -8)",
    "regs": [
      {
        "r": 0,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [
      {
        "offset": -8,
        "value": "unknown"
      },
      {
        "offset": -7,
        "value": "unknown"
      },
      {
        "offset": -6,
        "value": "unknown"
      },
      {
        "offset": -5,
        "value": "unknown"
      },
      {
        "offset": -4,
        "value": "unknown"
      },
      {
        "offset": -3,
        "value": "unknown"
      },
      {
        "offset": -2,
        "value": "unknown"
      },
      {
        "offset": -1,
        "value": "unknown"
      }
    ],
    "action": "r0 = *(dw *)(r10 + -8)"
  },
  {
    "pc": 3,
    "insns": "3   exit",
    "regs": [
      {
        "r": 0,
        "type": "unknown",
        "range": null,
        "offset": null
      },
      {
        "r": 1,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 2,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 3,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 4,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 5,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 6,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 7,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 8,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 9,
        "type": "not_init",
        "range": null,
        "offset": null
      },
      {
        "r": 10,
        "type": "stack_ptr",
        "range": null,
        "offset": 0
      }
    ],
    "stack_init": [
      {
        "offset": -8,
        "value": "unknown"
      },
      {
        "offset": -7,
        "value": "unknown"
      },
      {
        "offset": -6,
        "value": "unknown"
      },
      {
        "offset": -5,
        "value": "unknown"
      },
      {
        "offset": -4,
        "value": "unknown"
      },
      {
        "offset": -3,
        "value": "unknown"
      },
      {
        "offset": -2,
        "value": "unknown"
      },
      {
        "offset": -1,
        "value": "unknown"
      }
    ],
    "action": "exit"
  }
]
